[project]
name = "project-1-partanskiy-m25-555"
version = "0.1.0"
description = "Текстовая приключенческая игра-лабиринт на Python"
authors = [
    {name = "Ilya Partanskiy",email = "partanskiy.im@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.13.3,<0.14.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 